updated index.html from local

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <h1>Hello world!</h1>
 <p>This is the first file in my new Git Repo.</p>
 <p>This file is created at PresUniv campus </p>
+<h2>This is the line that is added in the local</h2>
 </body>
 </html>
