--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <p>This is the first file in my new Git Repo.</p>
 <p>This file is created at PresUniv campus </p>
 <h2>This is the line that is added in the local</h2>
+<strong>while this is added in the skeleton</strong>
 </body>
 </html>
